--- a/tabela.html
+++ b/tabela.html
@@ -10,7 +10,7 @@
 <body bgcolor="#A9A9A9">
     <h1>Tabela de Jogos</h1>
     <main>
-        <p>Abaixo veremos os números dos jogos citados anteriormente, como data de lançamento, número de vendas e etc.</p>
+        <p>Abaixo veremos os números dos jogos citados anteriormente, como data de lançamento, número de vendas e premiações</p>
     </main>
 
     <table bgcolor="yellow" border="10">
@@ -19,7 +19,7 @@
         <th align="center"><b>NOME DO JOGO</b></th>
         <th align="center"><b>DATA DE LANÇAMENTO</b></th>
         <th align="center"><b>NÚMERO DE CÓPIAS VENDIDAS</b></th>
-        <th align="center"><b>PREMIOS CONQUISTADOS</b></th>
+        <th align="center"><b>PRÊMIOS CONQUISTADOS</b></th>
     </tr>
     <tr>
         <td align="center">1</td>
