--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="shortcut icon" href="imagens/psicon.ico" type="image/x-icon">
 </head>
 <body>
+    <div class="btn">
+        <button type="button">
+            <a href="index.html">
+            <img src="imagens/psicon.ico">
+            </a>
+        </button>
+        </div>
     <h1> PlayStation</h1>
     <main>
 <p>Site criado por um fã do PlayStation, com o objetivo de compartilhar o conteúdo criado pela mesma. 
