--- a/Plus.html
+++ b/Plus.html
@@ -9,13 +9,11 @@
     <link rel="shortcut icon" href="imagens/psicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="btn">
-        <button type="button">
-            <a href="index.html">
-            <img src="imagens/psicon.ico">
-            </a>
-        </button>
-        </div>
+    <div class="imglink">
+        <a href="index.html">
+        <img src="imagens/psicon.ico">
+        </a>
+    </div>
     <h1> Ps Plus</h1>
     <main>
         <p>PlayStation Plus é o serviço de assinatura oferecido pela Sony para consoles da marca PlayStation (PS4 e PS5). Inicialmente voltado para possibilitar partidas multiplayer online, atualmente o serviço conta com diversos planos diferentes que podem adicionar um catálogo de games a serem baixados e jogados por assinantes.</p>
