--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <link rel="shortcut icon" href="imagens/psicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="btn">
-        <button type="button">
+    <div class="imglink">
             <a href="index.html">
             <img src="imagens/psicon.ico">
             </a>
-        </button>
         </div>
     <h1> PlayStation</h1>
     <main>
