--- a/tabela.html
+++ b/tabela.html
@@ -8,13 +8,11 @@
    <link rel="shortcut icon" href="imagens/psicon.ico" type="image/x-icon">
 </head>
 <body bgcolor="#A9A9A9">
-    <div class="btn">
-        <button type="button">
-            <a href="index.html">
-            <img src="imagens/psicon.ico">
-            </a>
-        </button>
-        </div>
+    <div class="imglink">
+        <a href="index.html">
+        <img src="imagens/psicon.ico">
+        </a>
+    </div>
     <h1>Tabela de Jogos</h1>
     <main>
         <p>Abaixo veremos os números dos jogos citados anteriormente, como data de lançamento, número de vendas e premiações</p>
