--- a/jogos.html
+++ b/jogos.html
@@ -9,13 +9,11 @@
     <link rel="shortcut icon" href="imagens/psicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="btn">
-        <button type="button">
-            <a href="index.html">
-            <img src="imagens/psicon.ico">
-            </a>
-        </button>
-        </div>
+    <div class="imglink">
+        <a href="index.html">
+        <img src="imagens/psicon.ico">
+        </a>
+    </div>
     <h1>Jogos</h1>
 
     <main>
